--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <div class="headline">
-      <h2 class="banner">Give me GeoJSON!</h2>
+      <h2 class="banner"></h2>
     </div>
     <div class="imgholder">
-      <img class="planetthumb" src="https://api.planet.com/v0/scenes/ortho/20151011_235520_0b0e/square-thumb?size=lg">
+      <img class="planetthumb" src="givemegeojson.png">
       <br />
       <p class="acquired"></p>
     </div>
@@ -28,13 +28,15 @@
     <br />
 
     <div class="geojson">
+      <h4 class="locationname"></h4>
       <p class="geojsonbox"></p>
       <p class="geojsoncenter"></p>
     </div>
 
     <div class = "datasrc">
-      <p class="imgsrc">Satellite Image from <a href="https://www.planet.com/">Planet Labs API </a></p>
-      <p class="geojsonsrc">Location Data from <a href="https://www.mapbox.com/developers/api/">MapBox API</a></p>
+      <p>Made by <a href="http://twitter.com/mceoin">@mceoin</a></p>
+      <p>Location Data from <a href="https://www.mapbox.com/developers/api/">MapBox API</a></p>
+      <p>Satellite Image from <a href="https://www.planet.com/">Planet Labs API </a></p>
     </div>
 
     <script src="index.js"></script>
